<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- This has all of the settings and is not used to create a menu -->

	<PreferenceCategory
			android:title="Hidden Setup Options">

		<!-- Not in use. Only true on frist boot -->
		<CheckBoxPreference
				android:key="first_run_set"
				android:defaultValue="true" />

		<!-- Takes user right into the test -->
		<CheckBoxPreference
				android:key="return_test_set"
				android:defaultValue="false" />

		<!-- The user's last show word selected -->
		<EditTextPreference
				android:key="show_word_set"
				android:defaultValue="Spanish" />

		<!-- The user's last hide word selected -->
		<EditTextPreference
				android:key="hide_word_set"
				android:defaultValue="English" />

		<!-- This is a check if user is at max level -->
		<CheckBoxPreference
				android:key="level_max_set"
				android:defaultValue="false" />

	</PreferenceCategory>

	<PreferenceCategory
			android:title="Hidden Level Options">

		<!-- Not in use. User's current level -->
		<EditTextPreference
				android:key="user_level"
				android:defaultValue="1"/>

		<!-- Not in use. User's current points for level -->
		<EditTextPreference
				android:key="level_points"
				android:defaultValue="0"/>

	</PreferenceCategory>

	<PreferenceCategory
			android:title="Hidden Score Options">

		<!-- Last spinner item selected -->
		<EditTextPreference
				android:key="remember_spin"
				android:defaultValue="All"/>

		<!-- True if a real score has been saved -->
		<CheckBoxPreference
				android:key="score_saved"
				android:defaultValue="false" />

		<!-- Row ID of saved score -->
		<EditTextPreference
				android:key="score_id"
				android:defaultValue="1"/>

		<!-- User's saved score -->
		<EditTextPreference
				android:key="last_score"
				android:defaultValue="0"/>

	</PreferenceCategory>

	<PreferenceCategory
			android:title="Hidden Key Menu Options">

		<CheckBoxPreference
				android:key="word_key_set"
				android:defaultValue="true"
				android:title="Remove Word list Key" />

		<CheckBoxPreference
				android:key="score_key_set"
				android:defaultValue="true"
				android:title="Remove Score Key" />

	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/settoptest">

		<!-- The hints are shown or not -->
		<CheckBoxPreference
				android:key="note_set"
				android:defaultValue="true"
				android:title="@string/setnotemain"
				android:summaryOn="@string/setnoteon"
				android:summaryOff="@string/setnoteoff" />

		<!-- The category is shown or not -->
		<CheckBoxPreference
				android:key="cata_set"
				android:defaultValue="true"
				android:title="@string/setcatemain"
				android:summaryOn="@string/setcateon"
				android:summaryOff="@string/setcateoff" />

	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/settopsound">

		<!-- If voice rec is used or not -->
		<CheckBoxPreference
				android:key="speak_set"
				android:defaultValue="true"
				android:title="@string/setspeakmain"
				android:summaryOn="@string/setspeakon"
				android:summaryOff="@string/setspeakoff" />

		<!-- If TTS is used or not -->
		<CheckBoxPreference
				android:key="tts_set"
				android:defaultValue="true"
				android:title="@string/setttsmain"
				android:summaryOn="@string/setttson"
				android:summaryOff="@string/setttsoff"/>

	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/settopfun">

		<!-- False = levels, True = free play -->
		<CheckBoxPreference
				android:key="game_set"
				android:defaultValue="false"
				android:title="@string/setgamemain"
				android:summaryOn="@string/setgameon"
				android:summaryOff="@string/setgameoff" />

		<!-- If words give one point or many -->
		<CheckBoxPreference
				android:key="point_set"
				android:defaultValue="false"
				android:title="@string/setonepointmain"
				android:summaryOn="@string/setonepointon"
				android:summaryOff="@string/setonepointoff" />

		<!-- If user wants the score to be saved -->
		<CheckBoxPreference
				android:key="keep_score"
				android:defaultValue="false"
				android:title="@string/setkeepmain"
				android:summaryOn="@string/setkeepon"
				android:summaryOff="@string/setkeepoff" />

		<!-- How the word list search finds words -->
		<ListPreference
				android:key="search_list_set"
				android:defaultValue="1"
				android:title="@string/setsearchmain"
				android:summary="@string/setsearchsum"
				android:dialogTitle="@string/setsearchdialog"
				android:entries="@array/setsearchlist"
				android:entryValues="@array/setsearchvalue" />

		<!-- If the next word gets auto picked if correct -->
		<CheckBoxPreference
				android:key="auto_set"
				android:defaultValue="false"
				android:title="@string/setautomain"
				android:summaryOn="@string/setautoon"
				android:summaryOff="@string/setautooff" />

		<!-- Not in use. If swip is used or not -->
		<CheckBoxPreference
				android:key="swip_set"
				android:defaultValue="true"
				android:title="@string/setswipmain"
				android:summaryOn="@string/setswipon"
				android:summaryOff="@string/setswipoff" />

	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/settopadj">

		<!-- False = dark, True = light -->
		<CheckBoxPreference
				android:key="theme_set"
				android:defaultValue="false"
				android:title="@string/setthememain"
				android:summary="@string/setthemesum"
				android:summaryOn="@string/setthemeon"
				android:summaryOff="@string/setthemeoff" />

		<!-- Number of scores to keep for this one user -->
		<ListPreference
				android:key="score_list_set"
				android:defaultValue="15"
				android:title="@string/setscoretopmain"
				android:summary="@string/setscoretopsum"
				android:dialogTitle="@string/setscoretopdialog"
				android:entries="@array/setscorelist"
				android:entryValues="@array/setscorelist" />

		<!-- Uses the flip layout or not -->
		<CheckBoxPreference
				android:key="hand_set"
				android:defaultValue="false"
				android:title="@string/sethandmain"
				android:summaryOn="@string/sethandon"
				android:summaryOff="@string/sethandoff" />

		<!-- Sets the orientation of app -->
		<ListPreference
				android:key="orie_list_set"
				android:defaultValue="0"
				android:title="@string/setoriemain"
				android:summary="@string/setoriesum"
				android:dialogTitle="@string/setoriedialog"
				android:entries="@array/setorielistname"
				android:entryValues="@array/setorielistvalue" />

	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/settopreset">

		<!-- Resets all of the marked words -->
		<Preference
				android:key="mark_reset_set"
				android:defaultValue="false"
				android:title="@string/setresetmarksmain"
				android:summary="@string/setresetmarkstext"/>

		<!-- Resets the user level to 1 -->
		<Preference
				android:key="level_reset_set"
				android:defaultValue="false"
				android:title="@string/setresetlevelmain"
				android:summary="@string/setresetleveltext"/>


		<!-- Deletes the user's scores -->
		<Preference android:key="clear_user_score_set"
				android:defaultValue="false"
				android:title="@string/setclearuserscoremain"
				android:summary="@string/setclearuserscoretext"/>

		<!-- Deletes all of the scores -->
		<Preference android:key="clear_all_score_set"
				android:defaultValue="false"
				android:title="@string/setclearallscoresmain"
				android:summary="@string/setclearallscorestext"/>

		<!-- Deletes a user from the app, not preference file -->
		<ListPreference android:key="delete_user_set"
				android:title="@string/setremoveusermain"
				android:summary="@string/setremoveusertext"
				android:dialogTitle="@string/setremoveuserdialog" />

	</PreferenceCategory>

    <!-- This is used in the old version of settings -->
    <PreferenceCategory
            android:title="@string/settopreset">

        <Preference
                android:key="mark_reset_set"
                android:defaultValue="false"
                android:title="@string/setresetgrouptitle"
                android:summary="@string/setresetgrouptext"/>

    </PreferenceCategory>

	<PreferenceCategory android:title="@string/settopmore">

        <!-- Will go to a page to buy items -->
        <Preference android:key="buy_set"
                android:defaultValue="false"
                android:title="@string/setbuymain"
                android:summary="@string/setbuysum"/>

		<!-- Will bring up how to activity -->
		<Preference android:key="howto_set"
				android:defaultValue="true"
				android:title="@string/sethowmain"
				android:summary="@string/sethowsum"/>

		<!-- Will bring up about Haley Software activity -->
		<Preference android:key="about_set"
				android:defaultValue="true"
				android:title="@string/setaboutmain"
				android:summary="@string/setaboutsum"/>

        <CheckBoxPreference
                android:key="analytics_set"
                android:defaultValue="true"
                android:title="@string/setdatasendmain"
                android:summaryOn="@string/setdatasendtexton"
                android:summaryOff="@string/setdatasendtextoff"/>

	</PreferenceCategory>

</PreferenceScreen>