<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
			android:id="@+id/menunote"
			android:title="@string/menuchangenote"
			android:showAsAction="never"/>

	<item
			android:id="@+id/menucata"
			android:title="@string/menuchangecate"
			android:showAsAction="never"/>

	<item
			android:id="@+id/menuscores"
			android:title="@string/menugoscores"
			android:showAsAction="never"/>

	<item
			android:id="@+id/menulist"
			android:title="@string/menugolist"
			android:showAsAction="never"/>

	<item
			android:id="@+id/menugohome"
			android:title="@string/menugoselect"
			android:showAsAction="never"/>

	<item
			android:id="@+id/menuset"
			android:title="@string/menusettings"
			android:showAsAction="never"/>

	<!-- android:icon="@drawable/icon -->

</menu>